--- a/index.htm
+++ b/index.htm
@@ -1,52 +1,23 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <style type="text/css">
-        .favourite {
-            background-color: gold;
-        }
-
-        #rubrik {
-            color: hotpink;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        #contactDetails {
-          margin: 20px;
-          padding: 10px;
-          border: 1px solid hotpink;
-        }
-
-        #contact-list {
-          margin: 20px;
-          padding: 10px;
-          border: 1px solid hotpink;
-        }
-
-        #close-details {
-          display: block;
-          float: right;
-        }
-
-        #favourite {
-          display: block;
-          float: right;
-        }
-
-    </style>
-    <script src="script.js" type="text/javascript"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kodprov Beamon People</title>
+  <link rel="stylesheet" href="style.css" type="text/css"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
-
 <body>
-    <div id="rubrik"><b>Contacts</b></div>
-    <div id="contactSearch"><input type="text" id="search" /><button id="search-button">Sök</button></div>
-    <div><a href="#" id="contactFilter">Filtrera favoriter</a></div>
-    <div id="contact-list"></div>
+  <section id="wrapper">
+    <h1 id="heading">Contacts</h1>
+    <div id="searchContainer"></div>
+    <div id=filterContainer></div>
+    <div id="contactContainer"></div>
     <div id="contactDetails" class="hidden"></div>
+  </section>
+  <script src="script.js" type="text/javascript"></script>
 </body>
-
 </html>
+
